--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DocU" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.DocU" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Disable Automatic Action Bar -->
+        <item name="windowActionBar">false</item>
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/Coral</item>
+        <item name="colorPrimaryVariant">@color/LightGoldenrodYellow</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
