--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,17 +24,17 @@
 
     <TextView
         android:id="@+id/recordedTextView"
-        android:layout_width="328dp"
-        android:layout_height="189dp"
+        android:layout_width="632dp"
+        android:layout_height="249dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="245dp"
-        android:textColor="@color/AntiqueWhite"
+        android:text="@string/your_diary_entry_goes_here"
+        android:textColor="@color/black"
         android:textSize="24sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topToolbar" />
 
     <ImageButton
         android:id="@+id/speakImageButton"
